# rusty

./: .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.toml  renovate.json
.github/workflows/: build-release.yml  cd.yml  ci.yml  rust.yml
src/: cli.rs  config.rs  main.rs
